# aml

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  BACKLOG.md  CI_COMMANDS.md  CLAUDE.md  Cargo.toml  DECISIONS.md  Dockerfile  GEMINI.md  GLOSSARY.md  LICENSE  MASTER_PROMPT.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  STATE.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: config.rs  db.rs  lib.rs  main.rs
backend/src/handlers/: audit.rs  health.rs  inquiry.rs  mod.rs  newsletter.rs  products.rs
backend/src/middleware/: mod.rs  rate_limit.rs  security_headers.rs  validate.rs
backend/src/models/: inquiry.rs  mod.rs  product.rs
backend/src/routes/: health.rs  inquiry.rs  mod.rs  newsletter.rs  products.rs
backend/src/services/: email.rs
backend/tests/: api_tests.rs
docs/: COST_OPTIMIZATION.md  CURRENT_STATUS.md  DEPLOYMENT.md  MASTER_AGENT_PROMPT.md  SECURITY_FIXES.md  TROUBLESHOOTING.md
frontend/: Cargo.toml  Dioxus.production.toml  Dioxus.toml  index.html  input.css  tailwind.config.js
frontend/assets/: site.webmanifest
frontend/assets/css/: main.css
frontend/assets/images/: cert-eu-approved.avif
frontend/content/: certifications.toml
frontend/content/products/: black-tiger-shrimp.md  cuttlefish.md  dried-shrimp.md  pink-perch.md  squid.md  vannamei-shrimp.md
frontend/public/: llms.txt  robots.txt  sitemap.xml
frontend/src/: config.rs  lib.rs  main.rs  seo.rs
frontend/src/certifications/: mod.rs  parser.rs
frontend/src/components/: cert_badge.rs  footer.rs  growth_timeline.rs  icons.rs  inquiry_cta.rs  layout.rs  loading.rs  mod.rs  navbar.rs  product_card.rs  stat_counter.rs  theme_toggle.rs
frontend/src/pages/: about.rs  certifications.rs  contact.rs  home.rs  inquiry.rs  mod.rs  not_found.rs  product_detail.rs  products.rs  sustainability.rs
frontend/src/products/: mod.rs  parser.rs
frontend/src/utils/: api.rs  asset_path.rs  mod.rs
frontend/tests/: asset_path_integration_tests.rs  config_tests.rs  landing_page_tests.rs  product_content_tests.rs  shared_types_tests.rs
scripts/: ci-local.sh  setup-hooks.sh
security/sbom/: .keep
security/threat-model/: TEMPLATE.md
shared/: Cargo.toml
shared/src/: lib.rs
