[workspace]
members = ["frontend", "backend", "shared"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto       = true
codegen-units = 1
strip     = true

[profile.dev]
opt-level = 0
debug     = true

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
