[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "alashore-api"
path = "src/main.rs"

[dependencies]
shared      = { path = "../shared" }
axum        = { version = "0.7", features = ["macros"] }
tokio       = { version = "1",   features = ["full"] }
tower       = { version = "0.4" }
tower-http  = { version = "0.5", features = ["cors", "compression-full", "trace", "limit"] }
serde       = { version = "1",   features = ["derive"] }
serde_json  = "1"
sqlx        = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy     = "0.15"
anyhow      = "1"
uuid        = { version = "1",   features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
regex       = "1"
lettre      = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
async-trait = "0.1"
governor    = { version = "0.6", features = ["dashmap"] }

[dev-dependencies]
tower       = { version = "0.4", features = ["util"] }
hyper       = "1"
http-body-util = "0.1"
