[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
dioxus        = { version = "0.6", features = ["web"] }
dioxus-router = { version = "0.6" }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
wasm-bindgen  = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net      = { version = "0.6", features = ["http"] }
console_error_panic_hook = "0.1"
log           = "0.4"
console_log   = "1"

[profile.release]
opt-level = "z"
lto       = true

[dev-dependencies]
dioxus-ssr = { version = "0.6" }
